{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 329,
  "lineage": "c86f0093-0903-f8f8-e5bb-35aeadd46c0c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "order_platform_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea1a3bd890612599",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f4c97e1b3cca58b6",
            "subnet_id": "subnet-057ad524bb43f9984"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891274465984",
            "id": "rtbassoc-0ea1a3bd890612599",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.order_platform_gw",
            "module.route_table.aws_route_table.order_platform_route_table",
            "module.vpc.aws_subnet.order_platform_subnet_public",
            "module.vpc.aws_vpc.order_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "order_platform_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07e5ce642bbc48c0d",
            "arn": "arn:aws:ec2:ap-south-1:891274465984:instance/i-09e756c2b93eba8f0",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "order_platform_ec2_profile",
            "id": "i-09e756c2b93eba8f0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "order_platform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0eae0f20e09185bcf"
              }
            ],
            "primary_network_interface_id": "eni-0eae0f20e09185bcf",
            "private_dns": "ip-10-0-1-97.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.97",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a555d82b009b59fc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057ad524bb43f9984",
            "tags": {
              "Name": "order_platform_ec2"
            },
            "tags_all": {
              "Name": "order_platform_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f6ef460a5ea2fd8a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891274465984",
            "id": "i-09e756c2b93eba8f0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_key_pair.order_platform_key",
            "module.iam_role.aws_iam_instance_profile.order_platform_profile",
            "module.iam_role.aws_iam_role.order_platform_ec2_role",
            "module.security_group.aws_security_group.order_platform_sg",
            "module.vpc.aws_subnet.order_platform_subnet_public",
            "module.vpc.aws_vpc.order_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_ip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "order_platform_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b316ed0578c6c241",
            "arn": "arn:aws:ec2:ap-south-1:891274465984:elastic-ip/eipalloc-0b316ed0578c6c241",
            "domain": "vpc",
            "id": "eipalloc-0b316ed0578c6c241",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-206-29-128.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.206.29.128",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "order_platform_eip"
            },
            "tags_all": {
              "Name": "order_platform_eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891274465984",
            "id": "eipalloc-0b316ed0578c6c241",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "order_platform_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891274465984:internet-gateway/igw-0f740c58a64c4961a",
            "id": "igw-0f740c58a64c4961a",
            "owner_id": "891274465984",
            "region": "ap-south-1",
            "tags": {
              "Name": "order_platform_gw"
            },
            "tags_all": {
              "Name": "order_platform_gw"
            },
            "vpc_id": "vpc-00268dd0198df6dbe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891274465984",
            "id": "igw-0f740c58a64c4961a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.order_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "order_platform_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891274465984:route-table/rtb-0f4c97e1b3cca58b6",
            "id": "rtb-0f4c97e1b3cca58b6",
            "owner_id": "891274465984",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f740c58a64c4961a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "order_platform_route_table"
            },
            "tags_all": {
              "Name": "order_platform_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00268dd0198df6dbe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891274465984",
            "id": "rtb-0f4c97e1b3cca58b6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.order_platform_gw",
            "module.vpc.aws_vpc.order_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "order_platform_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891274465984:security-group/sg-0f6ef460a5ea2fd8a",
            "description": "Allow specific inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0f6ef460a5ea2fd8a",
            "ingress": [],
            "name": "order-platform-sg",
            "name_prefix": "",
            "owner_id": "891274465984",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "order-platform-sg"
            },
            "tags_all": {
              "Name": "order-platform-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00268dd0198df6dbe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891274465984",
            "id": "sg-0f6ef460a5ea2fd8a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.order_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891274465984:security-group-rule/sgr-0e21b2032d76d244f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e21b2032d76d244f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0f6ef460a5ea2fd8a",
            "security_group_rule_id": "sgr-0e21b2032d76d244f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891274465984",
            "id": "sgr-0e21b2032d76d244f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.order_platform_sg",
            "module.vpc.aws_vpc.order_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891274465984:security-group-rule/sgr-0fb16fd3cf7e8ae68",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0fb16fd3cf7e8ae68",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0f6ef460a5ea2fd8a",
            "security_group_rule_id": "sgr-0fb16fd3cf7e8ae68",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891274465984",
            "id": "sgr-0fb16fd3cf7e8ae68",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.order_platform_sg",
            "module.vpc.aws_vpc.order_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891274465984:security-group-rule/sgr-01d488352b0dde34d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-01d488352b0dde34d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0f6ef460a5ea2fd8a",
            "security_group_rule_id": "sgr-01d488352b0dde34d",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891274465984",
            "id": "sgr-01d488352b0dde34d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.order_platform_sg",
            "module.vpc.aws_vpc.order_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891274465984:security-group-rule/sgr-0e21a0b811b48388a",
            "cidr_ipv4": "27.34.64.182/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0e21a0b811b48388a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0f6ef460a5ea2fd8a",
            "security_group_rule_id": "sgr-0e21a0b811b48388a",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891274465984",
            "id": "sgr-0e21a0b811b48388a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.order_platform_sg",
            "module.vpc.aws_vpc.order_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891274465984:security-group-rule/sgr-0bb5f42d13013aaf8",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 4000,
            "id": "sgr-0bb5f42d13013aaf8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0f6ef460a5ea2fd8a",
            "security_group_rule_id": "sgr-0bb5f42d13013aaf8",
            "tags": null,
            "tags_all": {},
            "to_port": 4000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891274465984",
            "id": "sgr-0bb5f42d13013aaf8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.order_platform_sg",
            "module.vpc.aws_vpc.order_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891274465984:security-group-rule/sgr-0d6a0e6e9e9621844",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-0d6a0e6e9e9621844",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0f6ef460a5ea2fd8a",
            "security_group_rule_id": "sgr-0d6a0e6e9e9621844",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891274465984",
            "id": "sgr-0d6a0e6e9e9621844",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.order_platform_sg",
            "module.vpc.aws_vpc.order_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rabbitMQ",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891274465984:security-group-rule/sgr-088b8f51616fffe2d",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5672,
            "id": "sgr-088b8f51616fffe2d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0f6ef460a5ea2fd8a",
            "security_group_rule_id": "sgr-088b8f51616fffe2d",
            "tags": null,
            "tags_all": {},
            "to_port": 5672
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891274465984",
            "id": "sgr-088b8f51616fffe2d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.order_platform_sg",
            "module.vpc.aws_vpc.order_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891274465984:security-group-rule/sgr-00d2b3b95ec767efe",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6379,
            "id": "sgr-00d2b3b95ec767efe",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0f6ef460a5ea2fd8a",
            "security_group_rule_id": "sgr-00d2b3b95ec767efe",
            "tags": null,
            "tags_all": {},
            "to_port": 6379
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891274465984",
            "id": "sgr-00d2b3b95ec767efe",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.order_platform_sg",
            "module.vpc.aws_vpc.order_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "order_platform_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891274465984:subnet/subnet-057ad524bb43f9984",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057ad524bb43f9984",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891274465984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "order_platform_subnet"
            },
            "tags_all": {
              "Name": "order_platform_subnet"
            },
            "vpc_id": "vpc-00268dd0198df6dbe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891274465984",
            "id": "subnet-057ad524bb43f9984",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.order_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "order_platform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891274465984:vpc/vpc-00268dd0198df6dbe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f00ea5107bc7fd68",
            "default_route_table_id": "rtb-0c486d8c830ed05e3",
            "default_security_group_id": "sg-027ae0aa49f6aaee8",
            "dhcp_options_id": "dopt-04af47ebbb85d59e5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00268dd0198df6dbe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c486d8c830ed05e3",
            "owner_id": "891274465984",
            "region": "ap-south-1",
            "tags": {
              "Name": "order_platform_vpc"
            },
            "tags_all": {
              "Name": "order_platform_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891274465984",
            "id": "vpc-00268dd0198df6dbe",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}